// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full integration test build modules posix 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"backend\\": \\"local\\",
      \\"stackName\\": \\"hello-modules\\",
      \\"version\\": \\"stubbed\\"
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"terraform.tfstate\\"
      }
    }
  },
  \\"module\\": {
<<<<<<< HEAD
    \\"localmodule\\": {
      \\"source\\": \\"./assets/localmodulelocalmodule/97F51B069A2EA5F1B6BA8B6C0FED84E4\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"hello-modules/local-module\\",
          \\"uniqueId\\": \\"localmodule\\"
        }
      }
    },
=======
>>>>>>> d7803082 (feat(lib): produce stable `cdk.tf.json` output)
    \\"gcloud\\": {
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"hello-modules/gcloud\\",
          \\"uniqueId\\": \\"gcloud\\"
        }
      },
      \\"source\\": \\"terraform-google-modules/gcloud/google\\",
      \\"version\\": \\"2.0.3\\"
    },
    \\"iam\\": {
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"hello-modules/iam\\",
          \\"uniqueId\\": \\"iam\\"
        }
      },
      \\"account_alias\\": \\"cdktf\\",
      \\"source\\": \\"terraform-aws-modules/iam/aws//modules/iam-account\\",
      \\"version\\": \\"3.12.0\\"
    },
    \\"localmodule\\": {
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"hello-modules/local-module\\",
          \\"uniqueId\\": \\"localmodule\\"
        }
      },
      \\"source\\": \\"../../../local-module\\"
    }
  }
}"
`;

exports[`full integration test build modules windows 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"hello-modules\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"module\\": {
    \\"localmodule\\": {
      \\"source\\": \\"..\\\\\\\\..\\\\\\\\..\\\\\\\\local-module\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"hello-modules/local-module\\",
          \\"uniqueId\\": \\"localmodule\\"
        }
      }
    },
    \\"gcloud\\": {
      \\"source\\": \\"terraform-google-modules/gcloud/google\\",
      \\"version\\": \\"2.0.3\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"hello-modules/gcloud\\",
          \\"uniqueId\\": \\"gcloud\\"
        }
      }
    },
    \\"iam\\": {
      \\"account_alias\\": \\"cdktf\\",
      \\"source\\": \\"terraform-aws-modules/iam/aws//modules/iam-account\\",
      \\"version\\": \\"3.12.0\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"hello-modules/iam\\",
          \\"uniqueId\\": \\"iam\\"
        }
      }
    }
  }
}"
`;
